# minishell

./: .gitignore  CMakeLists.txt  Makefile  a  external_function.txt  fd_open_close_test.c  hello  les  notes.txt  out  prout  salut  sources.mk  tarte  test
includes/: builtins.h  commands.h  env.h  env_main.h  exec.h  flux.h  g_struct.h  heredoc.h  history.h  libft.h  minishell.h  ms_env.h  parsing.h  pipes.h  redir.h  redirs.h  signals.h  utils.h
ressources/: external_function.txt  notes.txt
sources/: history.c  main.c  utils_1.c
sources/builtins/: builtin_cd.c  builtin_echo.c  builtin_env.c  builtin_exit.c  builtin_export.c  builtin_pwd.c  builtin_unset.c  exit_errors.c  select_builtin.c
sources/commands/: cmd_cd.c  cmd_echo.c  cmd_env.c  cmd_exit.c  cmd_export.c  cmd_pwd.c  cmd_unset.c
sources/debug/: debug.c
sources/env/: env.c  env_edit.c  env_exec.c  env_free.c  env_getter.c  env_main.c  env_var.c
sources/exec/: exec.c  exec_cmd_path.c  init_fds.c  pipeline.c  pipes.c  prepare_cmds.c  redirection.c
sources/flux/: flux_append.c  flux_heredoc.c  flux_pipe.c  flux_redir_input.c  flux_redir_output.c
sources/heredoc/: heredoc.c
sources/history/: history.c
sources/libft/: ft_atoi.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_isnbr.c  ft_itoa.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_strtrim.c  ft_substr.c
sources/parsing/: .parsing_add.c.swp  .parsing_alloc.c.swp  .parsing_lexer.c.swp  parsing.c  parsing_add.c  parsing_alloc.c  parsing_clean.c  parsing_cleanup.c  parsing_cmd.c  parsing_command.c  parsing_count.c  parsing_counta.c  parsing_countw.c  parsing_elem.c  parsing_env.c  parsing_error.c  parsing_get.c  parsing_grammar.c  parsing_init.c  parsing_lexer.c  parsing_main.c  parsing_node.c  parsing_quit.c  parsing_quotes.c  parsing_redirs.c  parsing_ret.c  parsing_split.c  parsing_split_1.c  parsing_split_2.c  parsing_split_3.c  parsing_token.c
sources/pipes/: pipes.c
sources/redir/: redir_dgreat.c  redir_dless.c  redir_get.c  redir_great.c  redir_less.c  redir_main.c  redir_ret.c
sources/redirs/: redirs.c
sources/signals/: signals.c
sources/utils/: ft_strlcpy.c  ft_strtrim.c  utils_1.c  utils_2.c  utils_3.c  utils_4.c  utils_5.c  utils_chr.c
tests/: test_corr.md  tests_ideas.md  tests_list.md  todolist  todolist.md
